--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-customizable-progressbar": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0"
   },
